--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -17,7 +17,7 @@
 ### 并发
 
 - [ ] 多线程
-
+- [ ] 并发包 实现原理
 
 - ★★★★★ [java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
 - ★★★★★ [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/yangming1996/p/8031199.html)
