--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -12,14 +12,17 @@
 
 ## java
 
+- [ ] [深入理解Java类加载器(ClassLoader)](https://blog.csdn.net/javazejian/article/details/73413292)
+- [ ] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
+
 ### 集合
 
 ### 并发
 
-- [ ] 多线程
-    - ★★★★★ [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
-    - ★★★★☆ [synchronized的实现原理与应用](https://blog.csdn.net/u012465296/article/details/53022317)
-    - ★★★★★ [Java并发编程-无锁CAS与Unsafe类及其并发包Atomic](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
+- 多线程
+    - [ ] ★★★★☆ [synchronized的实现原理与应用](https://blog.csdn.net/u012465296/article/details/53022317)
+    - [x] ★★★★★ [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
+    - [x] ★★★★★ [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
 - [ ] 并发包 实现原理
 
 - ★★★★★ [java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
