--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -12,17 +12,21 @@
 
 ## java
 
+类加载 等
+- [ ] [深入理解Java类型信息(Class对象)与反射机制](https://blog.csdn.net/javazejian/article/details/70768369)
 - [ ] [深入理解Java类加载器(ClassLoader)](https://blog.csdn.net/javazejian/article/details/73413292)
-- [ ] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
 
 ### 集合
 
 ### 并发
 
+- [ ] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
 - 多线程
-    - [ ] ★★★★☆ [synchronized的实现原理与应用](https://blog.csdn.net/u012465296/article/details/53022317)
     - [x] ★★★★★ [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
     - [x] ★★★★★ [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
+    - [ ] ★★★★★ [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
+    - [ ] ★★★★★ [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore)](https://blog.csdn.net/javazejian/article/details/76167357)
+    - [ ] ★★★★★ [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
 - [ ] 并发包 实现原理
 
 - ★★★★★ [java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
@@ -33,6 +37,9 @@
 ### IO
 
 - [ ] IO
+    - [ ] [1. Java NIO的原理与浅析](https://itimetraveler.github.io/2018/05/15/%E3%80%90Java%E3%80%91NIO%E7%9A%84%E7%90%86%E8%A7%A3/)
+    - [ ] [2. java中的IO整理(重要， 写代码)](https://www.cnblogs.com/rollenholt/archive/2011/09/11/2173787.html)
+    - [ ] [3. java NIO](https://www.cnblogs.com/rollenholt/archive/2011/09/29/2195730.html)
 - [ ] Socket
 
 ## 数据库
