--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -44,6 +44,16 @@
 
 ## 数据库
 
+- [ ] 数据库调优
+- [ ] [一条SQL语句执行得很慢的原因有哪些？](https://zhuanlan.zhihu.com/p/62941196)
+- [ ] [MySQL慢sql分析及优化](https://segmentfault.com/a/1190000006726948#articleHeader0)
+- [ ] [SQL 常用优化手段总结 - 分析 SQL 语句的一般步骤](https://www.jianshu.com/p/663b8f38db9f)
+    - [ ] [MySQL系列](https://www.jianshu.com/nb/23992160)
+    - [ ] SQL 常用优化手段总结 - 索引的应用
+    - [ ] SQL 常用优化手段总结 - 索引的使用误区
+    - [ ] SQL 常用优化手段总结 - 小技巧
+    - [ ] SQL 常用优化手段总结 - 认识数据库锁
+
 ### MySQL
 
 - ★★★★★ [MySQL索引背后的数据结构及算法原理](http://blog.codinglabs.org/articles/theory-of-mysql-index.html)
@@ -53,9 +63,11 @@
 
 ## Spring
 
+- [ ] [Spring 框架的设计理念与设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-spring-principle/index.html)
 - [ ] spring原理
+    - [ ] [彻底征服 Spring AOP 之 理论篇](https://segmentfault.com/a/1190000007469968)
 - [ ] applicationContext
-- [ ] spring流程
+- [ ] [Spring源码系列：Spring的启动过程](https://juejin.im/post/59a286866fb9a0249d616fbb)
 
 ## tomcat
 
