--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -1,14 +1,14 @@
 # 学习笔记
 
-★★★★★
+[ ]
 ☆☆☆☆☆
 
 ## 算法
 
 ## 数据结构
 
-- ★★★★★ [浅析SkipList跳跃表原理及代码实现](https://blog.csdn.net/ict2014/article/details/17394259)
-- ★★★★★ [查找 链表 二分 二叉树 红黑树 hash](../search/search.md)
+- [x] [浅析SkipList跳跃表原理及代码实现](https://blog.csdn.net/ict2014/article/details/17394259)
+- [x] [查找 链表 二分 二叉树 红黑树 hash](../search/search.md)
 
 ## java
 
@@ -22,17 +22,18 @@
 
 - [ ] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
 - 多线程
-    - [x] ★★★★★ [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
-    - [x] ★★★★★ [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
-    - [ ] ★★★★★ [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
-    - [ ] ★★★★★ [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore)](https://blog.csdn.net/javazejian/article/details/76167357)
-    - [ ] ★★★★★ [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
+    - [x] [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
+    - [x] [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
+    - [ ] [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
+    - [ ] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore)](https://blog.csdn.net/javazejian/article/details/76167357)
+    - [ ] [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
 - [ ] 并发包 实现原理
+- [ ] [Java ThreadPoolExecutor 线程池源码分析](https://segmentfault.com/a/1190000008693801)
 
-- ★★★★★ [java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
-- ★★★★★ [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/yangming1996/p/8031199.html)
-- ★★★★☆ [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/wzhanke/p/4763356.html)
-- ★★★★☆ [ConcurrentSkipListMap和ConcurrentHashMap）](https://www.cnblogs.com/ygj0930/p/6543901.html)
+- [x] [java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
+- [x] [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/yangming1996/p/8031199.html)
+- [x] [并发队列ConcurrentLinkedQueue、阻塞队列AraayBlockingQueue、阻塞队列LinkedBlockingQueue 区别 和  使用场景总结](https://www.cnblogs.com/wzhanke/p/4763356.html)
+- [x] [ConcurrentSkipListMap和ConcurrentHashMap）](https://www.cnblogs.com/ygj0930/p/6543901.html)
 
 ### IO
 
@@ -53,43 +54,45 @@
     - [ ] SQL 常用优化手段总结 - 索引的使用误区
     - [ ] SQL 常用优化手段总结 - 小技巧
     - [ ] SQL 常用优化手段总结 - 认识数据库锁
+- [ ] [MySQL 性能优化神器 Explain 使用分析](https://segmentfault.com/a/1190000008131735)
 
 ### MySQL
 
-- ★★★★★ [MySQL索引背后的数据结构及算法原理](http://blog.codinglabs.org/articles/theory-of-mysql-index.html)
-- ★★★★☆ [『浅入浅出』MySQL 和 InnoDB](https://draveness.me/mysql-innodb)
+- [ ] [MySQL索引背后的数据结构及算法原理](http://blog.codinglabs.org/articles/theory-of-mysql-index.html)
+- [ ] [『浅入浅出』MySQL 和 InnoDB](https://draveness.me/mysql-innodb)
 
 ## 网络
 
 ## Spring
 
-- [ ] [Spring 框架的设计理念与设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-spring-principle/index.html)
+- [x] [Spring 框架的设计理念与设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-spring-principle/index.html)
 - [ ] spring原理
-    - [ ] [彻底征服 Spring AOP 之 理论篇](https://segmentfault.com/a/1190000007469968)
+    - [x] [彻底征服 Spring AOP 之 理论篇](https://segmentfault.com/a/1190000007469968)
+    - [ ] [彻底征服 Spring AOP 之 实战篇](https://segmentfault.com/a/1190000007469982)
 - [ ] applicationContext
 - [ ] [Spring源码系列：Spring的启动过程](https://juejin.im/post/59a286866fb9a0249d616fbb)
 
 ## tomcat
 
-- ★★★★★ [Servlet 工作原理解析](https://www.ibm.com/developerworks/cn/java/j-lo-servlet/index.html)
-- ★★★★★ [Tomcat 系统架构与设计模式，第 1 部分 工作原理](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
-- ★★★★★ [Tomcat 系统架构与设计模式，第 2 部分 设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
+- [ ] [Servlet 工作原理解析](https://www.ibm.com/developerworks/cn/java/j-lo-servlet/index.html)
+- [ ] [Tomcat 系统架构与设计模式，第 1 部分 工作原理](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
+- [ ] [Tomcat 系统架构与设计模式，第 2 部分 设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
 
 ## 高并发、高可用
 
-- ★★★★☆ [什么是一致性Hash算法？](https://zhuanlan.zhihu.com/p/34985026)
-- ★★★★☆ [分布式一致性与共识算法  Paxos 和 Raft ](https://draveness.me/consensus)
-- ★★★★☆ [Raft 为什么是更易理解的分布式一致性算法](https://www.cnblogs.com/mindwind/p/5231986.html)
-- ★★★★☆ [Raft一致性算法笔记](https://www.jianshu.com/p/096ae57d1fe0)
+- [ ] [什么是一致性Hash算法？](https://zhuanlan.zhihu.com/p/34985026)
+- [ ] [分布式一致性与共识算法  Paxos 和 Raft ](https://draveness.me/consensus)
+- [ ] [Raft 为什么是更易理解的分布式一致性算法](https://www.cnblogs.com/mindwind/p/5231986.html)
+- [ ] [Raft一致性算法笔记](https://www.jianshu.com/p/096ae57d1fe0)
 
 
 
 ### Redis
 
-- [Redis原理及使用](http://www.uml.org.cn/sjjm/201803161.asp)
-- [Redis 设计与实现](http://redisbook.com/index.html)
-- [【Redis源码分析】Redis中的LRU算法实现](https://segmentfault.com/a/1190000017555834)
-- [ Redis内部数据结构详解](http://zhangtielei.com/posts/server.html)
+- [ ] [Redis原理及使用](http://www.uml.org.cn/sjjm/201803161.asp)
+- [ ] [Redis 设计与实现](http://redisbook.com/index.html)
+- [ ] [【Redis源码分析】Redis中的LRU算法实现](https://segmentfault.com/a/1190000017555834)
+- [ ] [ Redis内部数据结构详解](http://zhangtielei.com/posts/server.html)
 
 ### 
 
