--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -1,8 +1,5 @@
 # 学习笔记
 
-[ ]
-☆☆☆☆☆
-
 ## 算法
 
 ## 数据结构
@@ -10,27 +7,41 @@
 - [x] [浅析SkipList跳跃表原理及代码实现](https://blog.csdn.net/ict2014/article/details/17394259)
 - [x] [查找 链表 二分 二叉树 红黑树 hash](../search/search.md)
 
+## JVM
+
+- [x] [java 常见的OOM case](https://wenchao.ren/2019/08/java-%E5%B8%B8%E8%A7%81%E7%9A%84OOM-case/)
+- [ ] GC JVM解析 解析
+  - [x] [JVM 垃圾回收算法总结，对垃圾回收算法的解释较为深刻](https://blog.csdn.net/ol_beta/article/details/6791229)
+  - [x] [JVM 调优方法，结合 JConsole 工具示范了调优前后成果](https://blog.csdn.net/gzh0222/article/details/8363032)
+  - [x] [Java8内存模型—永久代(PermGen)和元空间(Metaspace)](https://www.cnblogs.com/paddix/p/5309550.html)
+  - [x] [IBM Developer JVM 垃圾回收器工作原理及使用实例介绍(JDK1.7)](https://www.ibm.com/developerworks/cn/java/j-lo-JVMGarbageCollection/)
+  - [ ] [IBM Developer JVM 优化经验总结](https://www.ibm.com/developerworks/cn/java/j-lo-jvm-optimize-experience/index.html)
+
 ## java
 
 类加载 等
-- [ ] [深入理解Java类型信息(Class对象)与反射机制](https://blog.csdn.net/javazejian/article/details/70768369)
-- [ ] [深入理解Java类加载器(ClassLoader)](https://blog.csdn.net/javazejian/article/details/73413292)
+- [x] [深入理解Java类型信息(Class对象)与反射机制](https://blog.csdn.net/javazejian/article/details/70768369)
+- [x] [深入理解Java类加载器(ClassLoader)](https://blog.csdn.net/javazejian/article/details/73413292)
 
 ### 集合
 
 ### 并发
 
-- [ ] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
-- 多线程
+- [x] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
+- [ ] CSDN 多线程 写的非常好！！！
     - [x] [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
     - [x] [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
     - [ ] [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
-    - [ ] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore)](https://blog.csdn.net/javazejian/article/details/76167357)
+    - [ ] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore) （CountDownLatch也是基于AQS的）](https://blog.csdn.net/javazejian/article/details/76167357)
     - [ ] [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
 - [ ] 并发包 实现原理
+  - [ ] [Java并发编程：CountDownLatch、CyclicBarrier和Semaphore](https://www.cnblogs.com/dolphin0520/p/3920397.html)
+  - [ ] [Java并发编程之CyclicBarrier详解 源码](https://blog.csdn.net/qq_38293564/article/details/80558157)
 - [ ] [Java ThreadPoolExecutor 线程池源码分析](https://segmentfault.com/a/1190000008693801)
+- [ ] [ThreadPoolExecutor相关](https://wenchao.ren/2019/08/ThreadPoolExecutor%E7%9B%B8%E5%85%B3/)
+- [ ] [FutureTask使用和源码解析](https://wenchao.ren/2019/03/FutureTask%E4%BD%BF%E7%94%A8%E5%92%8C%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90/)
 
-- [x] [java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
+- [x] [IBM Developer java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
 - [x] [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/yangming1996/p/8031199.html)
 - [x] [并发队列ConcurrentLinkedQueue、阻塞队列AraayBlockingQueue、阻塞队列LinkedBlockingQueue 区别 和  使用场景总结](https://www.cnblogs.com/wzhanke/p/4763356.html)
 - [x] [ConcurrentSkipListMap和ConcurrentHashMap）](https://www.cnblogs.com/ygj0930/p/6543901.html)
@@ -38,10 +49,14 @@
 ### IO
 
 - [ ] IO
-    - [ ] [1. Java NIO的原理与浅析](https://itimetraveler.github.io/2018/05/15/%E3%80%90Java%E3%80%91NIO%E7%9A%84%E7%90%86%E8%A7%A3/)
-    - [ ] [2. java中的IO整理(重要， 写代码)](https://www.cnblogs.com/rollenholt/archive/2011/09/11/2173787.html)
-    - [ ] [3. java NIO](https://www.cnblogs.com/rollenholt/archive/2011/09/29/2195730.html)
-- [ ] Socket
+    - [ ] [Java NIO的原理与浅析](https://itimetraveler.github.io/2018/05/15/%E3%80%90Java%E3%80%91NIO%E7%9A%84%E7%90%86%E8%A7%A3/)
+    - [x] [java中的IO整理(重要， 写代码)](https://www.cnblogs.com/rollenholt/archive/2011/09/11/2173787.html)
+    - [ ] [IBM Developer NIO 入门](https://www.ibm.com/developerworks/cn/education/java/j-nio/j-nio.html)
+    - [x] [IBM Developer 深入分析 Java I/O 的工作机制](https://www.ibm.com/developerworks/cn/java/j-lo-javaio/index.html)
+    - [x] [Linux 网络 I/O 模型简介](http://blog.anxpp.com/index.php/archives/884/)
+    - [x] [Java IO 编程（BIO、NIO、AIO完整实例代码）](http://blog.anxpp.com/index.php/archives/895/)
+    - [x] [Java NIO框架Netty简单使用](http://blog.anxpp.com/index.php/archives/997/)
+    - [x] [使用最新Netty实现一个简单的聊天程序](http://blog.anxpp.com/index.php/archives/997/)
 
 ## 数据库
 
@@ -65,18 +80,18 @@
 
 ## Spring
 
-- [x] [Spring 框架的设计理念与设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-spring-principle/index.html)
+- [x] [IBM Developer Spring 框架的设计理念与设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-spring-principle/index.html)
 - [ ] spring原理
     - [x] [彻底征服 Spring AOP 之 理论篇](https://segmentfault.com/a/1190000007469968)
-    - [ ] [彻底征服 Spring AOP 之 实战篇](https://segmentfault.com/a/1190000007469982)
+    - [x] [彻底征服 Spring AOP 之 实战篇](https://segmentfault.com/a/1190000007469982)
 - [ ] applicationContext
 - [ ] [Spring源码系列：Spring的启动过程](https://juejin.im/post/59a286866fb9a0249d616fbb)
 
 ## tomcat
 
-- [ ] [Servlet 工作原理解析](https://www.ibm.com/developerworks/cn/java/j-lo-servlet/index.html)
-- [ ] [Tomcat 系统架构与设计模式，第 1 部分 工作原理](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
-- [ ] [Tomcat 系统架构与设计模式，第 2 部分 设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
+- [ ] [IBM Developer Servlet 工作原理解析](https://www.ibm.com/developerworks/cn/java/j-lo-servlet/index.html)
+- [ ] [IBM Developer Tomcat 系统架构与设计模式，第 1 部分 工作原理](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
+- [ ] [IBM Developer Tomcat 系统架构与设计模式，第 2 部分 设计模式分析](https://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/index.html)
 
 ## 高并发、高可用
 
