--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -27,24 +27,31 @@
 
 ### 并发
 
-- [x] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
 - [ ] CSDN 多线程 写的非常好！！！
-    - [x] [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
-    - [x] [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
-    - [ ] [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
-    - [ ] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore) （CountDownLatch也是基于AQS的）](https://blog.csdn.net/javazejian/article/details/76167357)
-    - [ ] [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
+  - [x] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
+  - [x] [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
+  - [x] [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
+  - [ ] [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
+  - [ ] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore) （CountDownLatch也是基于AQS的）](https://blog.csdn.net/javazejian/article/details/76167357)
+  - [ ] [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
+
+
 - [ ] 并发包 实现原理
   - [ ] [Java并发编程：CountDownLatch、CyclicBarrier和Semaphore](https://www.cnblogs.com/dolphin0520/p/3920397.html)
   - [ ] [Java并发编程之CyclicBarrier详解 源码](https://blog.csdn.net/qq_38293564/article/details/80558157)
-- [ ] [Java ThreadPoolExecutor 线程池源码分析](https://segmentfault.com/a/1190000008693801)
-- [ ] [ThreadPoolExecutor相关](https://wenchao.ren/2019/08/ThreadPoolExecutor%E7%9B%B8%E5%85%B3/)
-- [ ] [FutureTask使用和源码解析](https://wenchao.ren/2019/03/FutureTask%E4%BD%BF%E7%94%A8%E5%92%8C%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90/)
 
-- [x] [IBM Developer java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
-- [x] [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/yangming1996/p/8031199.html)
-- [x] [并发队列ConcurrentLinkedQueue、阻塞队列AraayBlockingQueue、阻塞队列LinkedBlockingQueue 区别 和  使用场景总结](https://www.cnblogs.com/wzhanke/p/4763356.html)
-- [x] [ConcurrentSkipListMap和ConcurrentHashMap）](https://www.cnblogs.com/ygj0930/p/6543901.html)
+
+- [ ] 创建线程
+  - [ ] [Java ThreadPoolExecutor 线程池源码分析](https://segmentfault.com/a/1190000008693801)
+  - [ ] [ThreadPoolExecutor相关](https://wenchao.ren/2019/08/ThreadPoolExecutor%E7%9B%B8%E5%85%B3/)
+  - [ ] [FutureTask使用和源码解析](https://wenchao.ren/2019/03/FutureTask%E4%BD%BF%E7%94%A8%E5%92%8C%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90/)
+
+
+- [ ] 并发 集合
+  - [x] [IBM Developer java1.6 IBM 探索 ConcurrentHashMap 高并发性的实现机制](https://www.ibm.com/developerworks/cn/java/java-lo-concurrenthashmap/index.html)
+  - [x] [为并发而生的 ConcurrentHashMap（Java 8）](https://www.cnblogs.com/yangming1996/p/8031199.html)
+  - [x] [并发队列ConcurrentLinkedQueue、阻塞队列AraayBlockingQueue、阻塞队列LinkedBlockingQueue 区别 和  使用场景总结](https://www.cnblogs.com/wzhanke/p/4763356.html)
+  - [x] [ConcurrentSkipListMap和ConcurrentHashMap）](https://www.cnblogs.com/ygj0930/p/6543901.html)
 
 ### IO
 
