--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -68,7 +68,6 @@
 ## 数据库
 
 - [ ] 数据库调优
-- [ ] [一条SQL语句执行得很慢的原因有哪些？](https://zhuanlan.zhihu.com/p/62941196)
 - [ ] [MySQL慢sql分析及优化](https://segmentfault.com/a/1190000006726948#articleHeader0)
 - [ ] [SQL 常用优化手段总结 - 分析 SQL 语句的一般步骤](https://www.jianshu.com/p/663b8f38db9f)
     - [ ] [MySQL系列](https://www.jianshu.com/nb/23992160)
@@ -76,7 +75,7 @@
     - [ ] SQL 常用优化手段总结 - 索引的使用误区
     - [ ] SQL 常用优化手段总结 - 小技巧
     - [ ] SQL 常用优化手段总结 - 认识数据库锁
-- [ ] [MySQL 性能优化神器 Explain 使用分析](https://segmentfault.com/a/1190000008131735)
+- [x] [MySQL 性能优化神器 Explain 使用分析](https://segmentfault.com/a/1190000008131735)
 
 ### MySQL
 
