--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -31,19 +31,19 @@
   - [x] [全面理解Java内存模型(JMM)及volatile关键字](https://blog.csdn.net/javazejian/article/details/72772461)
   - [x] [深入理解Java并发之synchronized实现原理](https://blog.csdn.net/javazejian/article/details/72828483)
   - [x] [Java并发编程-无锁`CAS`与`Unsafe`类及其并发包`Atomic`](https://blog.csdn.net/javazejian/article/details/72772470#无锁的执行者-cas)
-  - [ ] [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
-  - [ ] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore) （CountDownLatch也是基于AQS的）](https://blog.csdn.net/javazejian/article/details/76167357)
+  - [x] [深入剖析基于并发AQS的(独占锁)重入锁(ReetrantLock)及其Condition实现原理](https://blog.csdn.net/javazejian/article/details/75043422)
+  - [x] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore) ](https://blog.csdn.net/javazejian/article/details/76167357)
   - [ ] [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
 
 
 - [ ] 并发包 实现原理
-  - [ ] [Java并发编程：CountDownLatch、CyclicBarrier和Semaphore](https://www.cnblogs.com/dolphin0520/p/3920397.html)
-  - [ ] [Java并发编程之CyclicBarrier详解 源码](https://blog.csdn.net/qq_38293564/article/details/80558157)
+  - [x] [Java并发编程：CountDownLatch、CyclicBarrier和Semaphore](https://www.cnblogs.com/dolphin0520/p/3920397.html)
+  - [x] [Java并发编程之CyclicBarrier详解 源码](https://blog.csdn.net/qq_38293564/article/details/80558157)
 
 
 - [ ] 创建线程
-  - [ ] [Java ThreadPoolExecutor 线程池源码分析](https://segmentfault.com/a/1190000008693801)
-  - [ ] [ThreadPoolExecutor相关](https://wenchao.ren/2019/08/ThreadPoolExecutor%E7%9B%B8%E5%85%B3/)
+  - [x] [Java ThreadPoolExecutor 线程池源码分析](https://segmentfault.com/a/1190000008693801)
+  - [x] [ThreadPoolExecutor相关](https://wenchao.ren/2019/08/ThreadPoolExecutor%E7%9B%B8%E5%85%B3/)
   - [ ] [FutureTask使用和源码解析](https://wenchao.ren/2019/03/FutureTask%E4%BD%BF%E7%94%A8%E5%92%8C%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90/)
 
 
@@ -90,8 +90,25 @@
 - [ ] spring原理
     - [x] [彻底征服 Spring AOP 之 理论篇](https://segmentfault.com/a/1190000007469968)
     - [x] [彻底征服 Spring AOP 之 实战篇](https://segmentfault.com/a/1190000007469982)
-- [ ] applicationContext
+- [ ] [Spring IOC 容器源码分析系列文章导读](http://www.tianxiaobo.com/2018/05/30/Spring-IOC-%E5%AE%B9%E5%99%A8%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90%E7%B3%BB%E5%88%97%E6%96%87%E7%AB%A0%E5%AF%BC%E8%AF%BB/)
+  - [ ] IOC
+      - [ ] Spring IOC 容器源码分析 - 获取单例 bean
+      - [ ] Spring IOC 容器源码分析 - 创建单例 bean 的过程
+      - [ ] Spring IOC 容器源码分析 - 创建原始 bean 对象
+      - [ ] Spring IOC 容器源码分析 - 循环依赖的解决办法
+      - [ ] Spring IOC 容器源码分析 - 填充属性到 bean 原始对象
+      - [ ] Spring IOC 容器源码分析 - 余下的初始化工作
+  - [ ] AOP
+      - [ ] Spring AOP 源码分析 - 筛选合适的通知器
+      - [ ] Spring AOP 源码分析 - 创建代理对象
+      - [ ] Spring AOP 源码分析 - 拦截器链的执行过程
+  - [ ] MVC
+      - [ ] Spring MVC 原理探秘 - 一个请求的旅行过程
+      - [ ] Spring MVC 原理探秘 - 容器的创建过程
 - [ ] [Spring源码系列：Spring的启动过程](https://juejin.im/post/59a286866fb9a0249d616fbb)
+
+
+
 
 ## tomcat
 
@@ -115,6 +132,8 @@
 - [ ] [【Redis源码分析】Redis中的LRU算法实现](https://segmentfault.com/a/1190000017555834)
 - [ ] [ Redis内部数据结构详解](http://zhangtielei.com/posts/server.html)
 
-### 
+### 其他
+
+[java题](http://www.iocoder.cn/Interview/good-collection/?title)
 
 ## 项目
