--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -35,6 +35,10 @@
   - [x] [剖析基于并发AQS的共享锁的实现(基于信号量Semaphore) ](https://blog.csdn.net/javazejian/article/details/76167357)
   - [ ] [深入剖析java并发之阻塞队列LinkedBlockingQueue与ArrayBlockingQueue](https://blog.csdn.net/javazejian/article/details/77410889)
 
+- [ ] 杂项
+  - [ ] [深入分析wait/notify为什么要在同步块内](https://blog.csdn.net/lsgqjh/article/details/61915074)
+  - [ ] [并发编程锁之ReentrantLock总结](https://blog.reactor.top/2018/01/31/%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%E9%94%81%E4%B9%8BReentrantLock%E6%80%BB%E7%BB%93/)
+  - [ ] [深入剖析ReentrantLock公平锁与非公平锁源码实现](https://blog.csdn.net/lsgqjh/article/details/63685058)
 
 - [ ] 并发包 实现原理
   - [x] [Java并发编程：CountDownLatch、CyclicBarrier和Semaphore](https://www.cnblogs.com/dolphin0520/p/3920397.html)
@@ -107,7 +111,7 @@
       - [x] [Spring MVC 原理探秘 - 容器的创建过程](http://www.tianxiaobo.com/2018/06/30/Spring-MVC-%E5%8E%9F%E7%90%86%E6%8E%A2%E7%A7%98-%E5%AE%B9%E5%99%A8%E7%9A%84%E5%88%9B%E5%BB%BA%E8%BF%87%E7%A8%8B/)
 - [ ] [Spring源码系列：Spring的启动过程](https://juejin.im/post/59a286866fb9a0249d616fbb)
 
-
+- [ ] [浅谈IOC--说清楚IOC是什么](https://www.cnblogs.com/debuglzq/archive/2013/06/05/3107957.html)
 
 
 ## tomcat
@@ -131,6 +135,7 @@
 - [ ] [Redis 设计与实现](http://redisbook.com/index.html)
 - [ ] [【Redis源码分析】Redis中的LRU算法实现](https://segmentfault.com/a/1190000017555834)
 - [ ] [ Redis内部数据结构详解](http://zhangtielei.com/posts/server.html)
+- [x] Redis集群
 
 ### 其他
 
