数据库隔离级别/锁/机制

--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -80,6 +80,10 @@
     - [ ] SQL 常用优化手段总结 - 小技巧
     - [ ] SQL 常用优化手段总结 - 认识数据库锁
 - [x] [MySQL 性能优化神器 Explain 使用分析](https://segmentfault.com/a/1190000008131735)
+- [ ] 数据库隔离级别/锁/机制
+    - [ ] [MVCC 机制](https://juejin.im/post/5c68a4056fb9a049e063e0ab#heading-1)
+    - [ ] [数据库事务、隔离级别和锁](https://www.jianshu.com/p/cb97f76a92fd)
+    - [ ] [数据库MVCC和隔离级别的关系是什么？ - 大宽宽的回答](https://www.zhihu.com/question/279538775/answer/407458020)
 
 ### MySQL
 
