MySQL索引原理及慢查询优化

--- a/article/学习笔记/学习笔记.md
+++ b/article/学习笔记/学习笔记.md
@@ -73,6 +73,7 @@
 
 - [ ] 数据库调优
 - [ ] [MySQL慢sql分析及优化](https://segmentfault.com/a/1190000006726948#articleHeader0)
+- [x] [MySQL索引原理及慢查询优化](https://tech.meituan.com/2014/06/30/mysql-index.html)
 - [ ] [SQL 常用优化手段总结 - 分析 SQL 语句的一般步骤](https://www.jianshu.com/p/663b8f38db9f)
     - [ ] [MySQL系列](https://www.jianshu.com/nb/23992160)
     - [ ] SQL 常用优化手段总结 - 索引的应用
